// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Paging renders correctly with custom values 1`] = `
<DocumentFragment>
  <div
    class="af-paging"
  >
    <div
      class="af-paging__limit"
    >
      <div
        class="af-paging__limit"
      >
        <form
          class="af-paging__form"
        >
          <div
            class="af-form__group"
          >
            <div
              class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
            >
              <label
                class="af-form__group-label"
                for="pagingid"
              >
                Show
              </label>
            </div>
            <div
              class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
            >
              <div
                class="af-form__select"
              >
                <div
                  class="af-form__select-container"
                >
                  <select
                    class="af-form__input-select"
                    id="pagingid"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="25"
                    >
                      25
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <span
                    class="glyphicon glyphicon-menu-down"
                  />
                </div>
                <span
                  class="af-form__input-cmplt"
                >
                  elements
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="af-paging__pager"
    >
      <nav
        class="af-pager"
      >
        <ul
          class="af-pager__pagination"
        >
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-nolink"
            >
              <i
                aria-hidden="true"
                class="glyphicon glyphicon-chevron-left"
              />
            </span>
          </li>
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-link"
            >
              1 of 10
            </span>
          </li>
          <li
            class="af-pager__item"
          >
            <a
              class="af-pager__item-link"
              href="#"
              role="button"
            >
              <i
                aria-hidden="true"
                class="glyphicon glyphicon-chevron-right"
              />
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table.Paging renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    class="af-paging"
  >
    <div
      class="af-paging__limit"
    >
      <div
        class="af-paging__limit"
      >
        <form
          class="af-paging__form"
        >
          <div
            class="af-form__group"
          >
            <div
              class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
            >
              <label
                class="af-form__group-label"
                for="pagingid"
              >
                Afficher
              </label>
            </div>
            <div
              class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
            >
              <div
                class="af-form__select"
              >
                <div
                  class="af-form__select-container"
                >
                  <select
                    class="af-form__input-select"
                    id="pagingid"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="25"
                    >
                      25
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <span
                    class="glyphicon glyphicon-menu-down"
                  />
                </div>
                <span
                  class="af-form__input-cmplt"
                >
                  éléments
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="af-paging__pager"
    >
      <nav
        class="af-pager"
      >
        <ul
          class="af-pager__pagination"
        >
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-nolink"
            >
              « Précédent
            </span>
          </li>
          <li
            class="af-pager__item af-pager__item--active"
          >
            <a
              class="af-pager__item-link"
              href="#"
            >
              <span>
                1
              </span>
            </a>
          </li>
          <li
            class="af-pager__item"
          >
            <a
              class="af-pager__item-link"
              href="#"
            >
              <span>
                2
              </span>
            </a>
          </li>
          <li
            class="af-pager__item af-pager__item--disabled"
          >
            <span
              class="af-pager__item-link"
            >
              ...
            </span>
          </li>
          <li
            class="af-pager__item"
          >
            <a
              class="af-pager__item-link"
              href="#"
            >
              <span>
                10
              </span>
            </a>
          </li>
          <li
            class="af-pager__item"
          >
            <a
              class="af-pager__item-link"
              href="#"
              role="button"
            >
              Suivant »
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
